cmake_minimum_required(VERSION 3.22)
project(untitled2)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled2 main.cpp KL_3.3.cpp Application.h Base_class.h Element_of_tree2.h Element_of_tree3.h Element_of_tree4.h Element_of_tree5.h Element_of_tree6.h Application.cpp Base_class.cpp Element_of_tree2.cpp Element_of_tree3.cpp Element_of_tree4.cpp Element_of_tree5.cpp Element_of_tree6.cpp)
